--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Suggests: 
     testthat
+URL: https://github.com/DavisVaughan/standardize
+BugReports: https://github.com/DavisVaughan/standardize/issues
