--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Suggests: 
-    testthat
+    testthat,
+    covr
 URL: https://github.com/DavisVaughan/standardize
 BugReports: https://github.com/DavisVaughan/standardize/issues
